Theme/ElegantFin-theme-nightly.css
/* ... */
/* 6 posters, 5 thumbs */
@media (max-width: 80em) {
    .portraitCard,
    .squareCard,
    .overflowPortraitCard,
    .overflowSquareCard {
        --cardCount: 6;
    }

    .squareCard:has(.cardFooter) {
        --cardCount: 5;
    }

    .overflowBackdropCard,
    .backdropCard {
        --cardCount: 4;
    }
}

/* 5 posters, 4 thumbs */
@media (max-width: 62em) {
    .portraitCard,
    .squareCard,
    .overflowPortraitCard,
    .overflowSquareCard {
        --cardCount: 5;
    }

    .squareCard:has(.cardFooter) {
        --cardCount: 4;
    }

    .backdropCard,
    .overflowBackdropCard {
        --cardCount: 4;
    }
}

/* 4 posters, 3 thumbs */
@media (max-width: 48.125em) {
    .portraitCard,
    .squareCard,
    .overflowPortraitCard,
    .overflowSquareCard {
        --cardCount: 4;
    }

    .squareCard:has(.cardFooter) {
        --cardCount: 3;
    }

    .backdropCard,
    .overflowBackdropCard {
        --cardCount: 3;
    }
}

/* 3 posters, 2 thumbs, 2 with footer */
@media (max-width: 30em) {
    .portraitCard,
    .squareCard,
    .overflowPortraitCard,
    .overflowSquareCard,
    .layout-mobile .portraitCard,
    .layout-mobile .squareCard,
    .layout-mobile .overflowPortraitCard,
    .layout-mobile .overflowSquareCard {
        --cardCount: 3;
    }

    .squareCard:has(.cardFooter) {
        --cardCount: 2;
    }

    .backdropCard,
    .overflowBackdropCard {
        --cardCount: 2;
    }
}

.layout-mobile .card {
    --sidePadding: 5%;
}

.card {
    --effectiveWidth: calc((99vw - (var(--sidePadding) * 2)));
    --cardWidth: calc(var(--effectiveWidth) / var(--cardCount) - var(--itemColumnGap));
    width: var(--cardWidth) !important;
    padding: 0.375em;
    transition: width 0.5s;
    box-sizing: content-box;
}

/* this makes the cards bigger and center aligned on older browsers */
@supports (aspect-ratio: 1 / 1) {
    .card {
        box-sizing: border-box;
    }
}

.layout-mobile .card {
    --cardWidth: calc(var(--effectiveWidth) / var(--cardCount));
}

/* this makes the card sizes smaller when phone is in landscape mode */
@media (orientation: landscape) and (max-height: 40em) {
    .layout-mobile .card {
        --effectiveWidth: calc((65vw - (var(--sidePadding) * 2)));
    }
}

.detailPageWrapperContainer {
    padding-top: unset;
    margin-top: unset;
}

.layout-desktop .detailPageWrapperContainer {
    min-height: 46vh;
    background: linear-gradient(180deg, transparent, 17vh, var(--darkerGradientPointAlpha) 50vh);
}

.layout-tv .detailPageWrapperContainer {
    padding-left: 30vw;
    min-height: 46vh;
    background: linear-gradient(0deg, var(--darkerGradientPointAlpha) 70%, 85%, transparent);
}

.detailPagePrimaryContainer {
    align-content: space-between;
    justify-content: end;
    flex-direction: column;
    /* center content on desktop */
    align-items: center;
    /* this aligns the plot to left on 10.11.0 */
    text-align: left;
    /* temporarily disabled for 10.11.0 */
    /* margin-bottom: -1.5em; */
}

/* this disables block padding on pre-10.11.0 */
.layout-mobile .detailPagePrimaryContainer.detailRibbon,
/* this disables block padding on 10.11.0 */
.layout-mobile .detailPagePrimaryContainer>.detailRibbon {
    padding: 0 var(--sidePadding);
}

/* [dir=ltr] .detailPagePrimaryContent {
    padding-right: 0;
} */

.layout-desktop .detailPagePrimaryContainer {
    background: transparent;
}

.layout-desktop .detailPageSecondaryContainer {
    background-color: transparent;
}

/* this removes the extra large left padding on 10.11.0 */
.detailPagePrimaryContainer>.detailPagePrimaryContent,
[dir=ltr] .detailPagePrimaryContainer>.detailRibbon,
/* this removes the extra large left padding on pre-10.11.0 */
[dir=ltr] .detailPagePrimaryContainer.detailRibbon {
    padding-left: var(--sidePadding);
}

.layout-mobile .detailPagePrimaryContent {
    padding-left: var(--sidePadding) !important;
    padding-right: var(--sidePadding) !important;
}

/* this places main media buttons below the title on 10.11.0 */
.layout-desktop [dir="ltr"] .detailRibbon,
.layout-tv [dir="ltr"] .detailRibbon {
    flex-direction: column;
}

.detailPagePrimaryContainer > .detailPagePrimaryContent {
    padding-top: 0;
}

.detailPageSecondaryContainer {
    /* use !important for pre-10.11.0 compatibility */
    padding-top: 0 !important;
}

/* this hides the header home button everywhere except the main media page */
.skinHeader-withBackground:not(.semiTransparent) .headerHomeButton {
    display: none;
}

/* workaround to show the header home button on the main media page on phones*/
.layout-mobile:has(#itemDetailPage:not(.hide)) .headerHomeButton {
    display: block;
}

.pageTitle {
    height: 1.5em;
    font-weight: var(--fontWeightBold);
    letter-spacing: 0.02em;
}

.headerLeft .pageTitle {
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
    font-weight: 500;
    letter-spacing: -0.01em;
    max-width: calc(100vw - 20em);
}

.layout-mobile .headerLeft .pageTitle {
    max-width: calc(100vw - 10em);
}

.layout-tv .headerLeft .pageTitle {
    max-width: calc(100vw - 25em);
}

.paper-icon-button-light > .material-icons {
    font-size: 1.25em;
}

.verticalSection.emby-scroller-container > h2.sectionTitle.sectionTitle-cards {
    padding-top: 1.25em !important;
    margin: 0 0 -0.5em 0;
}

#itemDetailPage .emby-scroller-container,
#itemDetailPage .emby-scroller,
#itemDetailPage .scrollX {
    margin: 0 calc(-1 * var(--sidePadding));
    padding-left: calc(var(--sidePadding) - 0.375em);
    /* mask-image: linear-gradient(90deg, transparent, white var(--sidePadding), white calc(100vw - var(--sidePadding)), transparent); */
}

.layout-desktop .emby-scroller-container,
.layout-desktop .emby-scroller,
.layout-desktop .scrollX {
    --itemColumnGap: 0.5em;
}

.emby-scroller,
.scrollX {
    padding-left: calc(var(--sidePadding) - 0.375em);
}

.sectionTabs .scrollX {
    padding-left: 0;
}
/* ... */

